[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description = ""

[tool.poetry.dependencies]
pandas = "*"
python = "^3.8"
seaborn = "*"
matplotlib = "^3.5.3"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"
